--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/communication.ico" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/astronaut.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ahib Afnan Siam | Portfolio</title>
   </head>
